--- a/lesson2/lesson2_1.ipynb
+++ b/lesson2/lesson2_1.ipynb
@@ -17,6 +17,16 @@
    "source": [
     "print(\"hello python\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec71b122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello\")"
+   ]
   }
  ],
  "metadata": {
